<resources>
    <string name="google_maps_api_key">AIzaSyASc_MCxc3jeRB3_h4b8trbHiAAOYoJK0o</string>
    <string name="common_app_name">Alubia \'16</string>
    <string name="common_internet_error">Algo fue mal! Comprueba tu conexión a Internet e inténtalo de nuevo.</string>
    <string name="common_no_internet">No hay conexión a Internet</string>
    <string name="common_accept">Aceptar</string>
    <string name="common_cancel">Cancelar</string>
    <string name="common_banner_ad_unit_id">ca-app-pub-9645153779384738/4669268804</string>
    <string name="album_write_access_permissions_title">Permisos de escritura</string>
    <string name="album_write_access_permissions_description">Se necesitan permisos de escritura para poder ver fotos de peñas y de la fiesta.</string>
    <string name="album_image_pager_1">Peñas</string>
    <string name="album_image_pager_2">Alubia \'15</string>
    <string name="album_image_list_title">Image List</string>
    <string name="album_title">Álbum</string>
    <string name="album_api_error">Necesitas un móvil con una versión de Android superior a la 2.3.7 para ver el álbum</string>
    <string name="schedule_title">Programa de fiestas \'15</string>
    <string name="schedule_friday">Viernes</string>
    <string name="schedule_friday_calendar">21 de agosto</string>
    <string name="schedule_saturday">Sábado</string>
    <string name="schedule_saturday_calendar">22 de agosto</string>
    <string name="schedule_sunday">Domingo</string>
    <string name="schedule_sunday_calendar">23 de agosto</string>
    <string name="schedule_monday">Lunes</string>
    <string name="schedule_monday_calendar">24 de agosto</string>
    <string name="schedule_greeting">Saludo del alcalde</string>
    <string name="schedule_greeting_content">Llega de nuevo la Fiesta de la Alubia, fiesta de la juventud, que vuelve a ser motivo de alegría y disfrute. Momento para olvidar la rutina cotidiana pero, también, la ocasión para demostrar que sabemos divertirnos, respetando lo que nos rodea y a la gente con la que convivimos.
\n\nOs invito a que dejéis a un lado vuestras preocupaciones durante estos días y a que salgáis a la calle a vivir el bullicio y la alegría que van a inundar nuestro pueblo.
\n\nEl pregonero de este año será D. Alberto Rodríguez Santos, nuestro párroco, al que agradecemos su colaboración al igual que a las Reinas y Damas Juveniles e Infantiles que, con su belleza y simpatía, nos harán sentirnos orgullosos de las nuevas generaciones lagunesas.
\n\nQuiero manifestar también nuestro agradecimiento a las Peñas y sus fantásticos peñistas porque sin vosotros nada de esto habría sido posible. Asimismo a los trabajadores municipales por su dedicación con el fin de que todo esté en orden.
\nUn recuerdo muy especial a quienes, en años anteriores, compartieron y disfrutaron de nuestra fiesta y ya no están entre nosotros. Estamos plenamente convencidos de que allá donde se encuentren, se sentirán felices viendo cómo seguimos alimentando la tradición.
\n\nEn nombre de la Corporación Municipal os deseamos que paséis unas felices fiestas.
\nUn abrazo muy fuerte de vuestro amigo y, a la vez, vuestro alcalde.
\n\n<b>El alcalde del Ayuntamiento de Laguna de Negrillos</b></string>
    <string name="schedule_queens_ladies">Reinas y Damas Alubia 2015</string>
    <string name="schedule_queens_ladies_content"><b>Reina y Damas juveniles.</b>
\n\nReina: Noelia Murciego Casado
\nDama: Laura Morán Lozano
\nDama: Raquel Ugidos López
\n\n\n<b>Reina y Damas infantiles.</b>
\n\nReina: Kiara Martínez Blanco
\nDama: María Caramazana García
\nDama: Belén Santo Tomás Merino</string>
    <string name="schedule_race">XIV Carrera de la Alubia</string>
    <string name="schedule_race_content"><b>SÁBADO 29 DE AGOSTO</b>
\n\n<b>Inscripciones:</b>
\n\n<b>18:30 h. -</b> Apertura de inscripciones para la XIV Carrera Popular “Alubia 2015”.
\n<b>Lugar:</b> Plaza del castillo.
\n\n<b>Horario:</b>
\n\n<b>19:00 h. -</b> Comienzo de la XIV Carrera Popular “Alubia 2015”.
\n<b>Salida:</b> Plaza del castillo.</string>
    <string name="schedule_saturday_ac1_hour">11:30</string>
    <string name="schedule_saturday_ac1_title">Partido de fútbol</string>
    <string name="schedule_saturday_ac1_subtitle">Campo de fútbol municipal</string>
    <string name="schedule_saturday_ac1_explanation">Enfrentamiento del Juristas de León contra el Candas en el campo de fútbol municipal.</string>
    <string name="home_title">Fiesta de la Alubia 2016</string>
    <string name="home_subtitle">Laguna de Negrillos</string>
    <string name="home_schedule">Programa de fiestas</string>
    <string name="home_groups">Peñas</string>
    <string name="home_forum">Foro</string>
    <string name="home_news">Novedades</string>
    <string name="home_more">Más</string>
    <string name="alubiaquiz_title">Alubia Quiz</string>
    <string name="alubiaquiz_congrats">¡Enhorabuena!</string>
    <string name="alubiaquiz_few_successes">No has acertado muchas respuestas, pero no te preocupes.
\n\n¡Inténtalo con otro nivel!</string>
    <string name="alubiaquiz_many_successes">¡Enhorabuena!
\n\n¿Sabes ya si has acertado más que tus amigos?</string>
    <string name="alubiaquiz_you_are_correct">Has acertado la pregunta.</string>
    <string name="alubiaquiz_you_are_failed">¡Mala suerte!</string>
    <string name="alubiaquiz_next">¡Siguiente!</string>
    <string name="alubiaquiz_solution">Solución</string>
    <string name="alubiaquiz_good_solution">¡Genial!</string>
    <string name="alubiaquiz_easy_level_title">Nivel fácil</string>
    <string name="alubiaquiz_easy_level_subtitle">Alubia Quiz - Nivel fácil</string>
    <string name="alubiaquiz_q1_f">1. La carrera de la Alubia consiste en</string>
    <string name="alubiaquiz_r11_f">Hacer medio trayecto corriendo y medio en bici</string>
    <string name="alubiaquiz_r12_f">Hacer todo el trayecto corriendo</string>
    <string name="alubiaquiz_r13_f">No hay ninguna carrera en la fiesta de la Alubia</string>
    <string name="alubiaquiz_s1_f">Has fallado. La carrera de la Alubia consiste en hacer todo el trayecto corriendo.</string>
    <string name="alubiaquiz_q2_f">2. ¿Dónde se celebraron los primeros conciertos del Alubia Rock?</string>
    <string name="alubiaquiz_r21_f">En la plaza de toros</string>
    <string name="alubiaquiz_r22_f">En el campo de fútbol</string>
    <string name="alubiaquiz_r23_f">En la explanada de la Casa de la cultura</string>
    <string name="alubiaquiz_s2_f">Mal. El Alubia Rock se suele celebrar en la plaza de toros del pueblo.</string>
    <string name="alubiaquiz_q3_f">3. ¿Qué famoso juego tuvo relevancia hace algunos años en la fiesta de la Alubia?</string>
    <string name="alubiaquiz_r31_f">La petanca</string>
    <string name="alubiaquiz_r32_f">La maceta</string>
    <string name="alubiaquiz_r33_f">Tiro al blanco</string>
    <string name="alubiaquiz_s3_f">Incorrecto. El juego del que hubo concursos en la fiesta fue la maceta.</string>
    <string name="alubiaquiz_q4_f">4. Las misas de peñas se celebran:</string>
    <string name="alubiaquiz_r41_f">Al amanecer</string>
    <string name="alubiaquiz_r42_f">Al mediodía</string>
    <string name="alubiaquiz_r43_f">Al atardecer</string>
    <string name="alubiaquiz_s4_f">Te has equivocado. Las misas de peñas se suelen celebrar a las 13h, es decir, al mediodía.</string>
    <string name="alubiaquiz_q5_f">5. ¿De qué es la exposición que se muestra cada año en la Casa de la cultura?</string>
    <string name="alubiaquiz_r51_f">De escultura</string>
    <string name="alubiaquiz_r52_f">De arquitectura</string>
    <string name="alubiaquiz_r53_f">De pintura</string>
    <string name="alubiaquiz_s5_f">No. La exposición que se muestra en la Casa de la cultura es de pintura.</string>
    <string name="alubiaquiz_q6_f">6. ¿Qué es la Party Dance?</string>
    <string name="alubiaquiz_r61_f">Un tractor con un remolque donde se sube la gente para bailar</string>
    <string name="alubiaquiz_r62_f">Un local ubicado cerca de las piscinas donde se baila y se sirven copas</string>
    <string name="alubiaquiz_r63_f">Una expresión que se utiliza como sinónimo de desmadre</string>
    <string name="alubiaquiz_s6_f">¿Qué sería de las noches sin ella? La Party Dance es un tractor con un remolque donde se sube la gente para bailar.</string>
    <string name="alubiaquiz_q7_f">7. ¿Qué día se celebra el desfile de peñas y carrozas?</string>
    <string name="alubiaquiz_r71_f">Sábado</string>
    <string name="alubiaquiz_r72_f">Domingo</string>
    <string name="alubiaquiz_r73_f">Lunes</string>
    <string name="alubiaquiz_s7_f">Error. El famoso desfile de peñas y carrozas se celebra el domingo por la tarde.</string>
    <string name="alubiaquiz_q8_f">8. ¿Cuál de estos concursos nunca se ha celebrado en una fiesta de la Alubia?</string>
    <string name="alubiaquiz_r81_f">Concurso de grafitis</string>
    <string name="alubiaquiz_r82_f">Concurso de disfraces</string>
    <string name="alubiaquiz_r83_f">Concurso de ballet</string>
    <string name="alubiaquiz_s8_f">No. El concurso que nunca se celebró fue el de ballet.</string>
    <string name="alubiaquiz_q9_f">9. La entrada anticipada en el Alubia Rock tiene un precio de:</string>
    <string name="alubiaquiz_r91_f">Un euro</string>
    <string name="alubiaquiz_r92_f">Cinco euros</string>
    <string name="alubiaquiz_r93_f">No hay entradas, es gratis</string>
    <string name="alubiaquiz_s9_f">Respuesta incorrecta. El Alubia Rock es gratis, no hay entradas.</string>
    <string name="alubiaquiz_q10_f">10. ¿Desde dónde sale el desfile infantil de disfraces?</string>
    <string name="alubiaquiz_r101_f">Desde el colegio público</string>
    <string name="alubiaquiz_r102_f">Desde el castillo</string>
    <string name="alubiaquiz_r103_f">Desde la plaza de toros</string>
    <string name="alubiaquiz_s10_f">Mal. El desfile infantil de disfraces sale desde el colegio público.</string>
    <string name="alubiaquiz_medium_level_title">Nivel medio</string>
    <string name="alubiaquiz_medium_level_subtitle">Alubia Quiz - Nivel medio</string>
    <string name="alubiaquiz_q1_m">1. ¿Cuál de estas peñas no existía cuando nació la fiesta de la Alubia?</string>
    <string name="alubiaquiz_r11_m">Sonic 2000</string>
    <string name="alubiaquiz_r12_m">Un millón de amigos</string>
    <string name="alubiaquiz_r13_m">Rockambole</string>
    <string name="alubiaquiz_hard_level_title">Nivel difícil</string>
    <string name="forum_menu_button">Iniciar sesión</string>
    <string name="forum_welcome">Bienvenido</string>
    <string name="forum_register_me">Registrarme</string>
    <string name="forum_enter_as_invited">Entrar como invitado</string>
    <string name="forum_insert_passwd">Introduce tu contraseña</string>
    <string name="forum_passwd">Contraseña</string>
    <string name="forum_continue">Continuar</string>
    <string name="forum_forgot_passwd">¿Olvidaste tu contraseña?</string>
    <string name="forum_send_passwd">Envíamela a mi correo</string>
    <string name="forum_insert_email">Introduce tu dirección de correo electrónico</string>
    <string name="forum_privacy_1">Tómate un minuto para revisar la</string>
    <string name="forum_privacy_2">política de privacidad</string>
    <string name="forum_email">Email</string>
    <string name="forum_insert_code">Introduce el código de tu peña (opcional)</string>
    <string name="forum_code_example">Ej.: BS8TF1R39K</string>
    <string name="forum_code_unknown_question">¿Todavía no conoces el código de tu peña?</string>
    <string name="forum_ask_to_admin">Pregúntale al administrador</string>
    <string name="forum_insert_a_passwd">Introduce una contraseña</string>
    <string name="more_contact">Contactar</string>
    <string name="more_settings">Ajustes</string>
    <string name="more_festivity_info">Sobre la fiesta</string>
    <string name="news_email">Email</string>
</resources>