<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/forum_insert_email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/forum_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/perform_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/d_button_gray"
                android:enabled="false"
                android:text="@string/forum_continue"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forum_privacy_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/politica2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forum_privacy_2"
                android:textColor="@color/dark_purple"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/progressbar_view_registro"
        layout="@layout/layout_progressbar_view" />
</FrameLayout>

