<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="4">

    <Button
        android:id="@+id/alubia_quiz"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="40dip"
        android:layout_weight="1"
        android:background="@drawable/d_normal_button_yellow"
        android:text="@string/alubiaquiz_title"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:background="@drawable/d_normal_button_yellow"
        android:text="@string/more_festivity_info"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:background="@drawable/d_normal_button_yellow"
        android:text="@string/more_settings"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="40dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_weight="1"
        android:background="@drawable/d_normal_button_yellow"
        android:text="@string/more_contact"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


</LinearLayout>