<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_default"
    android:gravity="center_vertical"
    android:padding="@dimen/side_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dip"
        android:text="@string/forum_welcome"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/d_button_green"
        android:text="@string/forum_menu_button"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/separator" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/d_button_blue"
        android:text="@string/forum_register_me"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/separator" />

    <Button
        android:id="@+id/invited"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:background="@drawable/d_button_yellow"
        android:text="@string/forum_enter_as_invited"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>
