<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dip"
                android:gravity="center"
                android:text="@string/forum_insert_passwd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.maksim88.passwordedittext.PasswordEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:hint="@string/forum_passwd"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/continue_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dip"
                android:background="@drawable/d_button_gray"
                android:enabled="false"
                android:text="@string/forum_continue"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:contentDescription="@string/home_forum"
                android:src="@drawable/forgot_passwd" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dip"
                android:gravity="center"
                android:text="@string/forum_forgot_passwd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forget_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/d_button_blue"
                android:text="@string/forum_send_passwd"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/progressbar_view_registro"
        layout="@layout/layout_progressbar_view" />

</FrameLayout>