<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/forum_insert_code"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ems="10"
                    android:hint="@string/forum_code_example"
                    android:imeOptions="actionDone" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/perform_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="30dip"
                android:background="@drawable/d_button_blue"
                android:text="@string/forum_continue"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/code" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="15dip"
                android:gravity="center"
                android:text="@string/forum_code_unknown_question"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/contact_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/d_button_blue"
                android:text="@string/forum_ask_to_admin"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/progressbar_view_registro"
        layout="@layout/layout_progressbar_view" />
</FrameLayout>