<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_default"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/side_margin">

    <Button
        android:id="@+id/go_easy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        android:background="@drawable/d_button_yellow"
        android:text="@string/alubiaquiz_easy_level_title"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/go_medium_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_weight="1"
        android:background="@drawable/d_button_yellow"
        android:text="@string/alubiaquiz_medium_level_title"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/go_hard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_weight="1"
        android:background="@drawable/d_button_yellow"
        android:text="@string/alubiaquiz_hard_level_title"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>